# EP2

./: CMakeLists.txt  README.md  template.cpp
week-01/: cast.cpp  cast_input  jeskyne.cpp  jeskyne_input  triangular.cpp  triangular_input
week-02/: bicoloring.cpp  drink.cpp  drink_input  keys.cpp  keys_input  solitaire.cpp  solitaire_input
week-03/: freckles.cpp  freckles_input  guide.cpp  spanning-tree.cpp  toll.cpp  toll_input
