cmake_minimum_required(VERSION 3.22)
project(EP2)

set(CMAKE_CXX_STANDARD 17)

add_executable(week-01-jeskyne week-01/jeskyne.cpp)
add_executable(week-01-cast week-01/cast.cpp)
add_executable(week-01-triangular week-01/triangular.cpp)
add_executable(week-01-routing week-01/routing.cpp)

add_executable(week-02-bicoloring week-02/bicoloring.cpp)
add_executable(week-02-drink week-02/drink.cpp)
add_executable(week-02-keys week-02/keys.cpp)
add_executable(week-02-solitaire week-02/solitaire.cpp)

add_executable(week-03-spanning-tree week-03/spanning-tree.cpp)
add_executable(week-03-freckles week-03/freckles.cpp)
add_executable(week-03-guide week-03/guide.cpp)
add_executable(week-03-toll week-03/toll.cpp)
add_executable(week-03-glass week-03/glass.cpp)
